# argos3-clone

./: Doxyfile_embedded  Doxyfile_standalone  argos_post_install.sh  macos_uninstall_argos3.sh  setup_env.sh
core/: .gdbinit  argos3_macos_wrapper.sh  config.h
src/core/: CMakeLists.txt
src/core/simulator/: simulator.cpp  simulator.h
src/core/utility/configuration/: argos_configuration.h
src/core/utility/configuration/urdf/: joint.cpp  joint.h  link.cpp  link.h  model.cpp  model.h  urdf_parser.cpp  urdf_parser.h
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/prototype/: CMakeLists.txt
src/plugins/robots/prototype/simulator/actuators/: prototype_joint_default_actuator.cpp  prototype_joint_default_actuator.h
src/plugins/robots/prototype/simulator/entities/: joint_entity.cpp  joint_entity.h  joint_equipped_entity.cpp  joint_equipped_entity.h  link_entity.cpp  link_entity.h  link_equipped_entity.cpp  link_equipped_entity.h  prototype_entity.cpp  prototype_entity.h
src/plugins/robots/prototype/simulator/visualizations/: qtopengl_prototype.cpp  qtopengl_prototype.h
src/plugins/robots/prototype/utility/geometries/: box_geometry3.h  cylinder_geometry3.h  geometry3.h  mesh.h  sphere_geometry3.h
src/plugins/robots/prototype/utility/urdf/: joint.cpp  joint.h  link.cpp  link.h  model.cpp  model.h  urdf_parser.cpp  urdf_parser.h
